--- a/servicio-hoteles.yaml
+++ b/servicio-hoteles.yaml
@@ -14,4 +14,4 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka
+      defaultZone: http://192.168.1.149:8761/eureka
